--- a/homeassistant-config/configuration.yaml
+++ b/homeassistant-config/configuration.yaml
@@ -10,3 +10,7 @@ group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
 scene: !include scenes.yaml
+
+webostv:
+  host: !secret propaganda_address
+  name: propagandaTV
