--- a/homeassistant-config/configuration.yaml
+++ b/homeassistant-config/configuration.yaml
@@ -12,11 +12,11 @@ script: !include scripts.yaml
 scene: !include scenes.yaml
 
 webostv:
-  host: !secret propaganda_address
+  host: !secret propaganda_host
   name: propagandaTV
 
 vacuum:
   - platform: xiaomi_miio
-    host: !secret s5_vacuum_address
+    host: !secret s5_vacuum_host
     token: !secret s5_vacuum_token
     name: Robo Rooter
