--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,7 +35,7 @@ repos:
         name: Check Homeassistant config
         description: Runs docker homeassistant to check configuration validity
         language: docker_image
-        entry: homeassistant/home-assistant:latest hass --script check_config --config /src/homeassistant-config --files
+        entry: homeassistant/home-assistant:stable hass --script check_config --config /src/homeassistant-config --files
         pass_filenames: false
         files: ^homeassistant-config/
         types: [file]
