--- a/.github/workflows/homeassistant.yaml
+++ b/.github/workflows/homeassistant.yaml
@@ -45,7 +45,7 @@ jobs:
         uses: "docker://homeassistant/home-assistant:stable"
         with:
           args: |
-            python -m homeassistant --config ./config/ --script check_config  --info all
+            python -m homeassistant --config ./homeassistant-config/ --script check_config  --info all
   home_assistant_beta:
     runs-on: ubuntu-latest
     needs: [yamllint, remarklint]
@@ -63,7 +63,7 @@ jobs:
         uses: "docker://homeassistant/home-assistant:beta"
         with:
           args: |
-            python -m homeassistant --config ./config/ --script check_config  --info all
+            python -m homeassistant --config ./homeassistant-config/ --script check_config  --info all
   home_assistant_dev:
     runs-on: ubuntu-latest
     needs: [yamllint, remarklint]
@@ -81,4 +81,4 @@ jobs:
         uses: "docker://homeassistant/home-assistant:dev"
         with:
           args: |
-            python -m homeassistant --config ./config/ --script check_config  --info all
+            python -m homeassistant --config ./homeassistant-config/ --script check_config  --info all
