--- a/homeassistant-config/automations.yaml
+++ b/homeassistant-config/automations.yaml
@@ -1,19 +1,19 @@
-# automations.yaml file
+---
 - id: shellies_announce
-  alias: 'Shellies Announce'
+  alias: Shellies Announce
   trigger:
-    - platform: homeassistant
-      event: start
-    - platform: time_pattern
-      hours: "/1"
+  - platform: homeassistant
+    event: start
+  - platform: time_pattern
+    hours: /1
   action:
     service: mqtt.publish
     data:
       topic: shellies/command
       payload: announce
 
-- id: 'shellies_discovery'
-  alias: 'Shellies Discovery'
+- id: shellies_discovery
+  alias: Shellies Discovery
   mode: queued
   max: 999
   trigger:
@@ -29,3 +29,45 @@
       shellyht-E00685:
         force_update_sensors: true
         expire_after: 900
+
+- id: homeassistant-update-notify
+  alias: HA Update notification
+  trigger:
+  - platform: state
+    entity_id: binary_sensor.updater
+    from: 'off'
+    to: 'on'
+  action:
+  - service: notify.notify
+    data:
+      title: HA Update available
+      message: There is a new Home Assistant release available.
+
+- id: shellies-update-notification
+  alias: Shellies Update notification
+  mode: single
+  trigger:
+  - platform: state
+    entity_id: group.shellies_firmware
+    from: 'off'
+    to: 'on'
+  action:
+  - service: notify.notify
+    data:
+      title: Update Shellies
+      message: There is a new Shelly release available.
+
+- id: 'update-shelly-firmware'
+  alias: Update Shellies
+  mode: single
+  description: Update shellies firmware if/when available
+  trigger:
+  - platform: state
+    entity_id: group.shellies_firmware
+    from: 'off'
+    to: 'on'
+  action:
+  - service: mqtt.publish
+    data:
+      topic: shellies/command
+      payload: update_fw
