--- a/homeassistant-config/configuration.yaml
+++ b/homeassistant-config/configuration.yaml
@@ -5,6 +5,7 @@ default_config:
 # Text to speech
 tts:
   - platform: google_translate
+    base_url: !secret tts_base_url
 
 group: !include groups.yaml
 automation: !include automations.yaml
@@ -22,3 +23,9 @@ vacuum:
     name: Robo Rooter
 
 python_script:
+
+http:
+  ip_ban_enabled: True
+  login_attempts_threshold: 5
+  use_x_forwarded_for: True
+  trusted_proxies: 0.0.0.0/0
