Move groups to packages

--- a/homeassistant-config/.gitignore
+++ b/homeassistant-config/.gitignore
@@ -18,6 +18,9 @@
 !automations/
 !automations/*
 !automations/**/*
+!entities/
+!entities/*
+!entities/**/*
 !python_scripts/
 !python_scripts/*
 !custom_components/
