--- a/homeassistant-config/entities/groups/shellies-firmware.yaml
+++ b/homeassistant-config/entities/groups/shellies-firmware.yaml
@@ -5,5 +5,6 @@ shellies_firmware:
     #- binary_sensor.shelly_1_770ecc_firmware_update
     #- binary_sensor.shelly_1_7691cd_firmware_update
     #- binary_sensor.shelly_1pm_ba0ab9_firmware_update
+    - binary_sensor.shelly_1pm_ba5659_firmware_update
     - binary_sensor.shelly_h_t_e00685_firmware_update
     #- binary_sensor.shelly_rgbw2_b0a85f_firmware_update
