--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,8 +67,8 @@ services:
       HSTS: 'off'
       LETSENCRYPT_HOST: "${HA_DOMAIN:-homeauto.local}"
     depends_on:
-      - proxy
       - mqtt
+      - proxy
       - repeater
     networks:
       - default
@@ -163,6 +163,7 @@ services:
   # based on https://github.com/alsmith/multicast-relay
   # unfortunately has to run in host mode.
   #
+  # to discover shellies: --relay '224.0.1.187:5683'
   # Used to enable discovery ... though if it is going to be used is another story
   repeater:
     image: zeridon/multicast-relay
@@ -170,7 +171,7 @@ services:
       context: https://github.com/alsmith/multicast-relay.git
     restart: always
     network_mode: "host"
-    command: --verbose --noSonosDiscovery --relay '224.0.1.187:5683' --interfaces ${RELAY_INTERFACES}
+    command: --verbose --noSonosDiscovery --interfaces ${RELAY_INTERFACES}
 
 volumes:
   proxy-certs:
