add new shellies

--- a/homeassistant-config/entities/groups/shellies-firmware.yaml
+++ b/homeassistant-config/entities/groups/shellies-firmware.yaml
@@ -6,6 +6,9 @@ shellies_firmware:
     #- binary_sensor.shelly_1_7691cd_firmware_update
     #- binary_sensor.shelly_1pm_ba0ab9_firmware_update
     - binary_sensor.shelly_1pm_ba5659_firmware_update
+    - binary_sensor.shelly_1pm_BA0AB9_firmware_update
+    - binary_sensor.shelly_1pm_40F520008838_firmware_update
+    - binary_sensor.shelly_1pm_40F52001721B_firmware_update
     - binary_sensor.shelly_h_t_e00685_firmware_update
     #- binary_sensor.shelly_rgbw2_b0a85f_firmware_update
     - binary_sensor.shelly_door_window_2_483fda81e1d1_firmware_update
