--- a/homeassistant-config/automations/maintenance/low-batteries-notifications.yaml
+++ b/homeassistant-config/automations/maintenance/low-batteries-notifications.yaml
@@ -12,4 +12,4 @@ use_blueprint:
       - sensor.pingvin_phone_app_battery_level
     actions:
     - service: notify.mobile_app_pingvin_phone_app
-      data: New batteries needed for {{sensors}}!!!
+      data: 'New batteries needed for {{sensors}}!!!'
