--- a/homeassistant-config/configuration.yaml
+++ b/homeassistant-config/configuration.yaml
@@ -32,3 +32,10 @@ vacuum:
     name: Robo Rooter
 
 python_script:
+
+device_tracker:
+  - platform: ping
+    count: 2
+    hosts:
+      pingvin_phone_ping: !secret pingvin_phone_host
+      kotka_phone_ping: !secret kotka_phone_host
