--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - --global.checkNewVersion=false
       - --global.sendAnonymousUsage=false
       # debug levels
-      - --log.level=DEBUG
+      - --log.level=ERROR
       # entrypoints definitions
       - --entryPoints.traefik.address=:8080
       - --entryPoints.web-bad.address=:80
